objects/Region__c.object
<CustomObject>
    <description>Region account resides in</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Region is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Region_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id from Expedia admin system</description>
        <label>Expedia Region Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Region_Id__c</fullName>
        <description>Salesforce Id from PSG org</description>
        <externalId>true</externalId>
        <label>External Region Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Id__c</fullName>
        <externalId>true</externalId>
        <label>Region Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <description>Super region the regions maps to</description>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>